# CChess

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog.md  README.md
.github/: pull_request_template.md
.github/actions/: action.yml
.github/workflows/: main.yml  static.yml
apps/: CMakeLists.txt  chess_cmd.cpp  main.cpp  simpleChess.cpp
cmake/: CodeCoverage.cmake  gcov.cmake
core/: CMakeLists.txt
core/include/chess/: board.h  board_serializer.h  color.h  common.h  field.h  piece.h  piece_type.h  player.h
core/src/: board.cc  board_serializer.cc  common.cc  piece.cc
docs/: Doxyfile  conf.py  index.rst
docs/source/: conf.py
include/CChess/: Board.h  ChessBoard.h  ChessPiece.h  Coordinate.h  Ghost.h  Piece.h  Player.h  Queen.h
include/chess/: game.h
source/: conf.py  index.rst
src/: CMakeLists.txt  game.cpp
src/controller/: controller.cpp  controller.h
src/model/: board.h  chessgame.cpp  chessgame.h  field.h
src/view/: abstract_user_interface.cpp  abstract_user_interface.h  user_interface.h
tests/: CMakeLists.txt  test_board.cc  test_game.cc  test_make_move.cc
